# aau-impr-exercises

./: CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: clang-tidy.yml  main.yml
12_2/: CMakeLists.txt
12_2/src/: main.c  main.h
1_9/: CMakeLists.txt
1_9/src/: main.c  main.h
2_4/: CMakeLists.txt
2_4/src/: main.c
2_5/: CMakeLists.txt
2_5/src/: main.c  main.h
2_6/: CMakeLists.txt
2_6/src/: main.c
4_6/: CMakeLists.txt
4_6/4_6_k/: CMakeLists.txt
4_6/4_6_k/src/: main.c  main.h
4_6/4_6_s/: CMakeLists.txt
4_6/4_6_s/src/: main.c  main.h
4_6/src/: kristiyan.c  main.c  main.h  simon.c
8_2/: CMakeLists.txt
8_2/lib/ppm/: CMakeLists.txt  pixel.c  pixel.h  ppm.c  ppm.h
8_2/src/: main.c  main.h
b_125_11/: CMakeLists.txt
b_125_11/src/: main.c
b_334_17/: CMakeLists.txt
b_334_17/src/: main.c  main.h
c_2_1/: CMakeLists.txt
c_2_1/src/: main.c
c_6_1/: CMakeLists.txt
c_6_1/src/: main.c  main.h
e_1/: CMakeLists.txt
e_1/src/: main.c  main.h
e_2/: CMakeLists.txt
e_2/src/: main.c  main.h
e_3/: CMakeLists.txt
e_3/src/: kampe-2023-2024.txt  main.c  main.h
