cmake_minimum_required(VERSION 3.25)
project(aau_impr_exercises C)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(1_9/)
add_subdirectory(2_4/)
add_subdirectory(2_5/)
add_subdirectory(2_6/)
add_subdirectory(4_6/4_6_k/)
add_subdirectory(4_6/4_6_s/)
add_subdirectory(b_125_11/)
add_subdirectory(c_2_1/)
add_subdirectory(12_2/)
add_subdirectory(b_334_17/)
add_subdirectory(8_2/)
add_subdirectory(c_6_1/)
add_subdirectory(e_1/)
add_subdirectory(e_2/)
add_subdirectory(e_3/)
